--- a/download.html
+++ b/download.html
@@ -43,6 +43,8 @@
     <li><a href="https://colab.research.google.com/drive/1YmZEq-7rIzd6R1s82bcVRxBnooNTN73K?usp=sharing" download>Prg_9</a></li>
     <li><a href="https://colab.research.google.com/drive/1QIW1fvntg2ey3VBA-jMmbWEAnf23t4rp?usp=sharing" download>Prg_10</a></li>
 
+    <li><a href="https://colab.research.google.com/drive/1ypJQRJRU0jLVNsL2bbCb--TIYCpJys0C?usp=sharing" download>AIO</a></li>
+
     
   </ul>
 </body>
